@@ -658,7 +658,7 @@ class t3lib_treeView {
 		} else {
 
 			$icon = t3lib_iconWorks::getSpriteIconForRecord($this->table, $row, array(
-				'title' => ($this->showDefaultTitleAttribute ? 'UID: '. $row['uid'] : ''),
+				'title' => ($this->showDefaultTitleAttribute ? 'UID: ' . $row['uid'] : $this->getTitleAttrib($row)),
 				'class' => 'c-recIcon'
 			));
 		
